ops/k8s/huo-er-mu-ci-hai-xia/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: huo-er-mu-ci-hai-xia
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: huo-er-mu-ci-hai-xia-tls
      hosts:
        - huo-er-mu-ci-hai-xia.homes
        - www.huo-er-mu-ci-hai-xia.homes
  rules:
    - host: huo-er-mu-ci-hai-xia.homes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: huo-er-mu-ci-hai-xia
                port:
                  number: 80
    - host: www.huo-er-mu-ci-hai-xia.homes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: huo-er-mu-ci-hai-xia
                port:
                  number: 80
